project/stage/tests/accept/type_assignments.ul
void main(){
  int foo;
  boolean bar;

  bar = foo < 5;
  foo = foo < 5;
}