project/stage/tests/reject/reject_redef.ul
void foo(int foo, float foo, int bar, void thing){
  int foo;
  float bar;
  int foobar;
  boolean foobar;
}

void main(){

}

void main(){
  void blah;
  foo();
}